--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,5 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Set directory
-      run: cd backend
     - name: Build with Maven
-      run: mvn clean package
+      run: mvn clean package -f backend/
