--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,6 +24,7 @@
         <module>Application</module>
         <module>Store</module>
         <module>PluginAPI</module>
+        <module>JarLoader</module>
     </modules>
 
     <dependencyManagement>
