--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backed
+        working-directory: backed
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
