--- a/backend/PluginAPI/pom.xml
+++ b/backend/PluginAPI/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>json-path</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
