--- a/backend/Application/src/main/resources/application.properties
+++ b/backend/Application/src/main/resources/application.properties
@@ -2,3 +2,23 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=price-watcher
 spring.data.mongodb.auto-index-creation = true
+
+# Producer properties
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id=producer
+topic.name.producer=producer
+
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.auto-offset-reset=earliest
+topic.name.consumer=consumer
+spring.kafka.consumer.group-id=consumer
+
+
+# Common Kafka Properties
+auto.create.topics.enable=true
+
+image.store.location=data/images
