--- a/backend/Application/src/main/resources/application.properties
+++ b/backend/Application/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.kafka.consumer.group-id=consumer
 auto.create.topics.enable=true
 
 image.store.location=data/images
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.metrics.web.server.request.autotime.enabled=true
+
+
