--- a/backend/Application/src/main/resources/application.properties
+++ b/backend/Application/src/main/resources/application.properties
@@ -30,4 +30,7 @@ management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.metrics.web.server.request.autotime.enabled=true
 
+proxy.host=178.48.68.61
+proxy.port=4145
+
 
