--- a/backend/Application/src/main/resources/application.properties
+++ b/backend/Application/src/main/resources/application.properties
@@ -33,4 +33,7 @@ management.metrics.web.server.request.autotime.enabled=true
 proxy.host=178.48.68.61
 proxy.port=4145
 
+elasticsearch.host=localhost
+elasticsearch.port=9200
+
 
