--- a/backend/PluginAPI/pom.xml
+++ b/backend/PluginAPI/pom.xml
@@ -33,6 +33,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.flbstv</groupId>
+            <artifactId>API</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.14.1</version>
@@ -62,6 +68,7 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
