Logstash JSON logging

--- a/backend/Application/pom.xml
+++ b/backend/Application/pom.xml
@@ -79,8 +79,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.2</version>
         </dependency>
 
     </dependencies>
